  just asking the user) the first by the later when else it would lead
  to an execution error.
- added the possibility to specify a gnupg key by mean of its keyid in
  addition to the email address it may be associated to, both for
  asymmetrical encryption and archive signing.
- added -b option to dar_split to set the I/O block size
- added -r option to dar_split to limit the transfer rate

from 2.6.9 to 2.6.10
- update the configure script to handle some undocumented --enable-*
  options that existed but were not expected to be used.
- fixed spelling in darrc comments
- fixed bug in dar_split that could occur in very rare conditions

from 2.6.8 to 2.6.9
- fixed some obvious bug when running doxygen (inlined documentation)
- fixing configure.ac to detect xattr.h system header when it is
  located in /usr/include/sys like under Alpine Linux distro (musl libc)
- fixed typo in symbol name "libdar.archive_summary" in python binding
- fixed bug met when testing an archive in sequential-read mode leading
  dar to skip back to test deleted inode which is useless and may lead
  to failure if the archive is read from a pipe
- adding *.zst files as excluded from compression when using the
  predefined target "compress-exclusion"
- fixed text diagram alignment in documentation and spelling errors
- moving date_past_N_days script to doc/sample with other scripts

from 2.6.7 to 2.6.8
- fixing bug leading binary delta failed to be read from an archive in
  some quite rare condition.
- fixed bug that was not listing file with delta path when filtering out
  unsaved inodes
- updated source package for the python binding tutorial document be
  installed with the rest of the documentation
- adding date_past_N_days helper script to backup only files later than
  "today minus N days"
- incorporated the "args" support built script in dar source package

from 2.6.6 to 2.6.7
- fixing shell_interaction_emulator class declaration to avoid compilation
  errors and warning under MacOS